Swagger codegen working 🚀

--- a/contrib/go/examples/src/swagger/org/pantsbuild/example/petstore/BUILD
+++ b/contrib/go/examples/src/swagger/org/pantsbuild/example/petstore/BUILD
@@ -5,3 +5,10 @@ go_swagger_library(
     name='petstore-go',
     sources=['./swagger.json'],
 )
+
+# TODO(apratti): remove this after gen.go-swagger in pants.ini is fixed
+target(
+  name = 'swagger-deps',
+  dependencies = [
+  ]
+)
